--- a/state.html
+++ b/state.html
@@ -6,8 +6,8 @@
 
 			embeddedservice_bootstrap.init(
 				'00Dbc000000BoG1',
-				'Intake_Chat',
-				'https://companysagesf--partial.sandbox.my.site.com/ESWIntakeChat1732631988721',
+				'Web_Chat',
+				'https://companysagesf--partial.sandbox.my.site.com/ESWWebChat1728240942684',
 				{
 					scrt2URL: 'https://companysagesf--partial.sandbox.my.salesforce-scrt.com'
 				}
@@ -17,5 +17,5 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://companysagesf--partial.sandbox.my.site.com/ESWIntakeChat1732631988721/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://companysagesf--partial.sandbox.my.site.com/ESWWebChat1728240942684/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
